import {
  Entity,
  Column,
  ManyToOne,
  JoinColumn,
  CreateDateColumn,
  PrimaryGeneratedColumn,
} from 'typeorm';
import { ApiProperty } from '@nestjs/swagger';
import { Campañas } from './campañas.entity';
import { Usuario } from './usuario.entity';

@Entity('donaciones')
export class Donaciones {
  @ApiProperty({ example: 1, description: 'Id única de la Donación' })
  @PrimaryGeneratedColumn()
  id: number;

  @ApiProperty({
    example: 'Donación Solidaria de Lucas Frey', // Ver otras opciones de titulo
    description: 'Titulo de la Donación indicando el usuario que donó',
  })
  @Column({ type: 'varchar', length: 100 })
  titulo: string;

  @ApiProperty({
    example: 'INSERTE-DETALLE', // Ver opciones de Detalles
    description: 'Información sobre la Donación realizada por el Usuario',
  })
  @Column({ type: 'varchar', length: 255 })
  detalle: string;

  @ApiProperty({ example: 'ROPA', description: 'El tipo de Articulo a Donar' })
  @Column({ type: 'varchar', length: 25 })
  tipo: string;

  @ApiProperty({ example: 5, description: 'Cantidad del Articulo a Donar' })
  @Column({ type: 'int' })
  cantidad: number;

  @ApiProperty({
    example: 'Estado¿?', // ¿Es realmente necesario?
    description: 'Indicador del estado del Articulo',
  })
  @Column({ type: 'varchar', length: 15 })
  estado: string;

  @ApiProperty({
    example: '2025-12-15T10:30:45Z',
    description: 'Fecha de cuando se realizo la Donación',
  })
  @CreateDateColumn({ type: 'datetime2' })
  fecha_registro: Date;

  @ApiProperty({ example: 1, description: 'Clave Foranea de la Campaña' })
  @ManyToOne(() => Campañas, (campaña) => campaña.donaciones)
  @JoinColumn({ name: 'id_campaña' })
  campaña: Campañas;

  @ManyToOne(() => Usuario)
  usuario: Usuario;
}
