@startuml DER
left to right direction
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false

' ===================== BASE =====================

entity Contacto {
  +id : int <<PK>>
  correo : varchar(255)
  prefijo : varchar(5)
  telefono : varchar(20)
}

entity Direccion {
  +id : int <<PK>>
  calle : varchar(80)
  numero : varchar(10)
  adicional : varchar(100)
  codigo_postal : varchar(10)
  ciudad : varchar(50)
  provincia : varchar(50)
}

' ===================== USUARIO =====================

entity Usuario {
  +id : int <<PK>>
  clave : varchar(255)
  rol : varchar(20)
  documento : varchar(15)
  nombre : varchar(50)
  apellido : varchar(50)
  puntos : int
  departamento : varchar(10)
  contacto_id : int <<FK>>
  direccion_id : int <<FK>>
  habilitado : bit
  verificado : bit
  fecha_registro : datetime2
  ultimo_cambio : datetime2
  ultima_conexion : datetime2
  resetPasswordToken : varchar(255)
  resetPasswordExpires : datetime2
}

entity RankingDonador {
  +id_usuario : int <<PK,FK>>
  puntos : int
}

' ===================== EMPRESA =====================

entity Empresa {
  +id : int <<PK>>
  cuit : varchar(20)
  razon_social : varchar(100)
  rubro : varchar(50)
  nombre_empresa : varchar(100)
  contacto_id : int <<FK>>
  direccion_id : int <<FK>>
  verificada : bit
  logo : varchar(255)
  web : varchar(255)
  descripcion : varchar(500)
  fecha_registro : datetime2
  ultimo_cambio : datetime2
  habilitada : bit
  creado_por_id : int <<FK>>
  actualizado_por_id : int <<FK>>
}

entity EmpresaUsuario {
  +id : int <<PK>>
  id_usuario : int <<FK>>
  id_empresa : int <<FK>>
  fecha_asignacion : datetime2
  activo : bit
  rol : varchar(20)
}

' ===================== ORGANIZACION =====================

entity Organizacion {
  +id : int <<PK>>
  cuit : varchar(20)
  razon_social : varchar(100)
  nombre_organizacion : varchar(100)
  contacto_id : int <<FK>>
  direccion_id : int <<FK>>
  descripcion : varchar(255)
  verificada : bit
  web : varchar(255)
  fecha_registro : datetime2
  ultimo_cambio : datetime2
  habilitada : bit
  creado_por_id : int <<FK>>
  actualizado_por_id : int <<FK>>
}

entity OrganizacionUsuario {
  +id : int <<PK>>
  id_usuario : int <<FK>>
  id_organizacion : int <<FK>>
  fecha_asignacion : datetime2
  activo : bit
  rol : varchar(20)
}

' ===================== BENEFICIOS =====================

entity Beneficios {
  +id : int <<PK>>
  titulo : varchar(255)
  tipo : varchar(50)
  detalle : varchar(255)
  cantidad : int
  fecha_registro : datetime2
  ultimo_cambio : datetime2
  valor : int
  estado : varchar(20)
  id_empresa : int <<FK>>
  creado_por_id : int <<FK>>
  actualizado_por_id : int <<FK>>
}

entity UsuarioBeneficio {
  +id : int <<PK>>
  id_usuario : int <<FK>>
  id_beneficio : int <<FK>>
  cantidad : int
  usados : int
  estado : varchar
  fecha_reclamo : datetime2
  fecha_uso : datetime2
  ultimo_cambio : datetime2
}

' ===================== CAMPAÑAS =====================

entity Campaigns {
  +id : int <<PK>>
  estado : varchar(20)
  titulo : varchar(255)
  descripcion : varchar(255)
  fecha_inicio : date
  fecha_fin : date
  fecha_registro : datetime2
  objetivo : int
  puntos : int
  ultimo_cambio : datetime2
  id_organizacion : int <<FK>>
  creado_por_id : int <<FK>>
  actualizado_por_id : int <<FK>>
}

entity Donaciones {
  +id : int <<PK>>
  titulo : varchar(100)
  detalle : varchar(255)
  tipo : varchar(25)
  cantidad : int
  estado : int
  puntos : int
  fecha_registro : datetime2
  fecha_aprobacion : datetime2
  fecha_rechazo : datetime2
  motivo_rechazo : varchar(255)
  id_campaña : int <<FK>>
  usuario_id : int <<FK>>
  creado_por_id : int <<FK>>
  aprobado_por_id : int <<FK>>
  rechazado_por_id : int <<FK>>
}

entity Imagenes_Campaña {
  +id : int <<PK>>
  imagen : varchar(255)
  campañas_id : int <<FK>>
  esPortada : boolean
}

entity Imagenes_Donaciones {
  +id : int <<PK>>
  imagen : varchar(255)
  donaciones_id : int <<FK>>
}

' ===================== INVITACIONES =====================

entity Invitacion {
  +id : int <<PK>>
  token : varchar(255)
  correo : varchar(255)

  empresaId : int <<FK>>
  organizacionId : int <<FK>>

  invitadorID : int <<FK>>
  usuarioId : int <<FK>>

  rol : varchar(20)
  expirada : boolean
  fecha_creacion : datetime2
  fecha_expiracion : datetime2
}

' ===================== RELACIONES =====================

Usuario ||--|| RankingDonador
Usuario ||--o{ EmpresaUsuario
Usuario ||--o{ OrganizacionUsuario
Usuario ||--o{ Donaciones
Usuario ||--o{ UsuarioBeneficio

Empresa ||--o{ EmpresaUsuario
Empresa ||--o{ Beneficios

Organizacion ||--o{ OrganizacionUsuario
Organizacion ||--o{ Campaigns

Campaigns ||--o{ Donaciones
Campaigns ||--o{ Imagenes_Campaña

Donaciones ||--o{ Imagenes_Donaciones

Beneficios ||--o{ UsuarioBeneficio

Contacto ||--o{ Usuario
Contacto ||--o{ Empresa
Contacto ||--o{ Organizacion

Direccion ||--o{ Usuario
Direccion ||--o{ Empresa
Direccion ||--o{ Organizacion

' ===== INVITACIONES =====

Usuario ||--o{ Invitacion : invitador
Usuario ||--o{ Invitacion : usuario

Empresa ||--o{ Invitacion
Organizacion ||--o{ Invitacion

@enduml